[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lpa2v"
version = "0.1.0"
description = "Biblioteca Python orientada a objetos para algoritmos baseados em LPA2v."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
keywords = ["lpa2v", "paraconsistente", "para-analisador", "algoritmos"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.scripts]
lpa2v = "lpa2v.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
